--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   db:
-    container_name: linx_wearther
+    container_name: wearther_databse
     image: postgres
     restart: always
     environment:
